[package]
name = "futures-chaining"
version = "0.1.0"
edition = "2021"
authors = ["bart van pelt <brtvnplt@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.33"
rand = "0.8"  # Updated to a specific version
log = "0.4.33"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"