[package]
name = "grpc_example"
version = "0.1.0"
edition = "2021"  # Tonic requires 2018 or 2021
authors = ["bart van pelt <brtvnplt@gmail.com>"]

[dependencies]
dotenvy = "0.15"
tonic = "0.14.6"
prost = "0.14.4"
tonic-prost = "0.14.6"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

[build-dependencies]
tonic-prost-build = "0.14.6"